--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles-media.css">
-    
+    <link rel="stylesheet" href="/css files/style.css">
+    <link rel="stylesheet" href="/css files/styles-media.css">
+     
     <title>Document</title>
 </head>
 <body>
     <aside>
         <ul>
-            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-file"></i></a> </li>
-            <li><a href="#"><i class="fa-solid fa-envelope"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/luismolinuevo/"><i class="fa-brands fa-linkedin"></i></a></li>
+            <li><a href="https://github.com/luismolinuevo"><i class="fa-brands fa-github"></i></a></li>
+            <li><a href="https://www.facebook.com/luisandy.molinuevo.1/"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="/LM Resume.pdf" download="Resume"><i class="fa-solid fa-file"></i></a> </li>
+            <li><a href="contactme.html"><i class="fa-solid fa-envelope"></i></a></li>
         </ul>
     </aside>
 
