--- a/HTML Files/index.html
+++ b/HTML Files/index.html
@@ -27,7 +27,7 @@
                 <li><a href="index.html">home.html</a></li>
                 <li><a href="skills.html">skills.css</a></li>
                 <li><a href="projects.html">projects.js</a></li>
-                <li><a href="#contactme.php">contactme.php</a></li>
+                <li><a href="contactme.html">contactme.php</a></li>
             </ul>
     </nav>
 
