--- a/HTML Files/projects.html
+++ b/HTML Files/projects.html
@@ -25,8 +25,8 @@
             <ul>
                 <li><a href="index.html">home.html</a></li>
                 <li><a href="skills.html">skills.css</a></li>
-                <li><a href="#projects.html">projects.js</a></li>
-                <li><a href="#contactme.php">contactme.php</a></li>
+                <li><a href="projects.html">projects.js</a></li>
+                <li><a href="contactme.php">contactme.php</a></li>
             </ul>
     </nav>
 
